<resources>
    <string name="app_name">GoMeet</string>
    <string name="chat_api_key">e43k9kfvgyze</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="recommended">Recommended</string>
    <string name="events">Events</string>
    <string name="participants_button">"Manage Participants"</string>
    <string name="tag_sort">By common tags</string>
    <string name="log_in_button">Log In</string>
    <string name="post_event_button">Post</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm">Confirm</string>
...
    <string name="invite_button">Invite</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_public_event_button">Public</string>
    <string name="create_private_event_button">Private</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_image">Add Image</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_text_field">Email</string>
    <string name="password_text_field">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username_text_field">Username</string>
    <string name="confirm_password_text_field">Confirm Password</string>
    <string name="first_name_text_field">First Name</string>
    <string name="first_name_text_field_error">First Name is not valid</string>
    <string name="last_name_text_field">Last Name</string>
    <string name="last_name_text_field_error">Last Name is not valid</string>
    <string name="phone_number_text_field">Phone Number</string>
    <string name="phone_number_text_field_error">Phone Number is not valid</string>
    <string name="title_text_field">Title</string>
    <string name="location_text_field">Location</string>
    <string name="price_text_field">Price</string>
    <string name="description_text_field">Description</string>
    <string name="link_text_field">Link</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="date_picker_ok">OK</string>
    <string name="add_tags">Add Tags</string>
    <string name="create_text">Choose your audience</string>
    <string name="done">Done</string>
...
    <string name="invitations">Invitations</string>
    <string name="options">Options</string>
    <string name="share_profile">Share Profile</string>
    <string name="block">Block</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="welcome_screen_text">See what\'s happening around you right now.</string>
    <string name="register_name_country_phone_text">Tell Us More About Yourself</string>
    <string name="country_picker_error">Country is not valid</string>
    <string name="country_picker_text">Country</string>
    <string name="register_password_text">Please enter your password.</string>
    <string name="password_length_error">Your Password should be at least 6 characters</string>
    <string name="passwords_matching_error">Your Passwords should match</string>
    <string name="register_username_email_text">Welcome to GoMeet !\nPlease enter a username and an email.</string>
    <string name="username_too_long_error">Your Username Should Not Exceed 26 characters</string>
    <string name="invalid_username_error">The Username is not valid or already taken</string>
...
