...
            onDismissRequest = { expanded = false }) {
              countries.value.forEach { selectionOption ->
                DropdownMenuItem(
                    modifier =
                        Modifier.align(Alignment.CenterHorizontally)
                            .fillMaxWidth()
                            .testTag("CountryItem"),
                    text = { Text(text = selectionOption) },
                    onClick = {
                      selectedOptionText = selectionOption
                      expanded = false
                      callback(selectedOptionText)
                    })
...
